# python-manual

./: .gitignore  README.md  pyproject.toml
基本语法/: 元组.ipynb  函数.ipynb  异常.ipynb  数据类型.ipynb  数据类型转换.ipynb  模块.ipynb  运算符.ipynb  集合.ipynb
语言基础/: calc.py  json.ipynb  temp.ipynb  元组.ipynb  其他.ipynb  列表.ipynb  基本语法.ipynb  字典.ipynb  字符串.ipynb  对象.ipynb  流程控制.ipynb
