[tool.poetry]
name = "python-manual"
version = "0.1.0"
description = ""
authors = ["cw <chudaozhe@outlook.com>"]
readme = "README.md"
packages = [{include = "python_manual"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

